init ui LoadWebFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">UI_Avanzadas</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="url">URL: </string>
+    <string name="loadFirst">load first web</string>
+    <string name="loadSecond">load second web</string>
 </resources>
